RESOLVED FIXED131595
REGRESSION (r167164): -[WKNSURLSessionLocal _getCookieHeadersForTask:completionHandler:] _block_invoke can access a deallocated completionHandler
https://bugs.webkit.org/show_bug.cgi?id=131595
Summary REGRESSION (r167164): -[WKNSURLSessionLocal _getCookieHeadersForTask:completi...
Andy Estes
Reported 2014-04-13 12:47:29 PDT
REGRESSION (r167164): -[WKNSURLSessionLocal _getCookieHeadersForTask:completionHandler:] _block_invoke can access a deallocated completionHandler
Attachments
Patch (2.28 KB, patch)
2014-04-13 12:50 PDT, Andy Estes
mitz: review+
Andy Estes
Comment 1 2014-04-13 12:50:05 PDT
Andy Estes
Comment 2 2014-04-13 13:02:47 PDT
Note You need to log in before you can comment on or make changes to this bug.