REGRESSION (r167164): -[WKNSURLSessionLocal _getCookieHeadersForTask:completionHandler:] _block_invoke can access a deallocated completionHandler https://bugs.webkit.org/show_bug.cgi?id=131595

Reviewed by Dan Bernstein.

Make a copy of completionHandler and release it after we're done with it.

* Shared/mac/CookieStorageShim.mm:
(-[WKNSURLSessionLocal _getCookieHeadersForTask:completionHandler:]):

Canonical link: https://commits.webkit.org/149670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167202 268f45cc-cd09-0410-ab3c-d52691b4dbfc